Fri Feb  1 22:04:30 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - drivers/bcmxcp.c, drivers/nut_usb.c, drivers/nut_usb.h: (backport from the trunk)
   Changed to version 0.14. Fix for PW5115 and PW9120 running on usb.

Fri Feb  1 15:22:04 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - include/common.h: move the config.h include before timehead.h so
   that this last use it (thanks to Thomas Jarosch).

Tue Jan 29 13:54:36 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/oneac.c, data/driver.list: (backport from the trunk) add updated
   Oneac driver, and round out the driver list for this driver.

Mon Jan 28 11:28:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * driver.list: (backport from the trunk) add compatibility information for
   - Atlantis Land and Mustek Powermust Office 650 (reported by
     Andrea Zicchetti)
   - Oneac XAU models

Sat Jan 26 21:16:45 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * clients/Makefile.am: backport from the trunk.
   - set libupsclient version to 1.0.0
   - use the shared version of libupsclient for LDADD
 - docs/protocol.txt: mention libupsclient

Sat Jan 26 21:16:45 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - lib/Makefile.am: only install libupsclient-config if pkg-config support is
   disabled.
 - man/libupsclient-config.1: created (Debian Lintian QA report)

Fri Jan 18 14:03:01 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * snmp-ups: backported from the trunk.
   - mgemib.h: add support for MGE* Environment Sensor (ref 66 846).
     This adds the data ambient.temperature and ambient.humidity.
   - snmp-ups.c: fix the handling of multiplier on ambient.temperature
     for units other than APC. Bump driver release to 0.421 since
     there are still differences with the trunk version.

2.2.1

Fri Dec 21 10:59:01 UTC 2007 / Arnaud Quette <arnaudquette@eaton.com>

 - Bump the release version to 2.2.1

2.2.1-pre2
